--- a/test.html
+++ b/test.html
@@ -1,9 +1,5 @@
 <style>
     body {
-        height: 100vh;
-        width: 100vw;
-        background-color: black;
-        margin: 0rem;
         overflow: hidden;
     }
 
@@ -25,61 +21,9 @@
         object-position: 100% center;
     }
 
-    /* -- YouTube Link Styles -- */
 
-    body.menu-toggled>.meta-link>span {
-        color: rgb(30, 30, 30);
-    }
-
-    #source-link {
-        bottom: 60px;
-    }
-
-    #source-link>i {
-        color: rgb(94, 106, 210);
-    }
-
-    #yt-link>i {
-        color: rgb(239, 83, 80);
-    }
-
-    .meta-link {
-        align-items: center;
-        backdrop-filter: blur(3px);
-        background-color: rgba(255, 255, 255, 0.05);
-        border: 1px solid rgba(255, 255, 255, 0.1);
-        border-radius: 6px;
-        bottom: 10px;
-        box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
-        cursor: pointer;
-        display: inline-flex;
-        gap: 5px;
-        left: 10px;
-        padding: 10px 20px;
-        position: fixed;
-        text-decoration: none;
-        transition: background-color 400ms, border-color 400ms;
-        z-index: 10000;
-    }
-
-    .meta-link:hover {
-        background-color: rgba(255, 255, 255, 0.1);
-        border: 1px solid rgba(255, 255, 255, 0.2);
-    }
-
-    .meta-link>i,
-    .meta-link>span {
-        height: 20px;
-        line-height: 20px;
-    }
-
-    .meta-link>span {
-        color: white;
-        font-family: "Rubik", sans-serif;
-        font-weight: 500;
-    }
 </style>
-<div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
+<div id="image-track-partners" data-mouse-down-at="0" data-prev-percentage="0">
     <img class="image" src="https://unlim8ted.com/images/logo/logo.png" draggable="false" />
     <img class="image" src="https://unlim8ted.com/images/logo/Zipper Line Logo.png" draggable="false" />
     <img class="image" src="https://unlim8ted.com/images/logo/Sky Tale Media Logo.png" draggable="false" />
@@ -91,7 +35,7 @@
 </div>
 
 
-<script>const track = document.getElementById("image-track");
+<script>const track = document.getElementById("image-track-partners");
 
     const handleOnDown = e => track.dataset.mouseDownAt = e.clientX;
 
