fixed home being display

--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
 
   <a class="cart-btn" href="cart" style="font-size: larger; position: fixed; top: 30px">🛍️</a>
 
-  <div id="home" style="display: nonr;">
+  <div id="home" style="display: none;">
     <style>
       .navbar a:hover {
         color: #00ffcc;
