fixed some colors so content is visible

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
       padding: 50px 20px;
       margin: 20px auto;
       max-width: 900px;
-      background-color: #fff;
+      background-color: #262c34;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       border-radius: 8px;
     }
@@ -392,7 +392,7 @@
     .portfolio-item,
     .blog-post {
       padding: 20px;
-      background-color: #f9f9f9;
+      background-color: #241e45;
       border: 1px solid #ddd;
       border-radius: 8px;
       transition: box-shadow 0.3s;
