working temporary ulr fix

--- a/index.html
+++ b/index.html
@@ -647,18 +647,18 @@
       <button class="navbar-toggle" style="position:absolute; top:5px; left:1%" onclick="toggleMenu()">☰</button>
       <ul class="nav-links" id="navbarLinks">
         <li class="nav-item"><a href="/">Home</a></li>
-        <li class="nav-item"><a href="/old/#products">Products</a></li>
-        <li class="nav-item"><a href="/old/#help">Help</a></li>
-        <li class="nav-item"><a href="/old/#about">About</a></li>
+        <li class="nav-item"><a href="/old#products">Products</a></li>
+        <li class="nav-item"><a href="/old#help">Help</a></li>
+        <li class="nav-item"><a href="/old#about">About</a></li>
         <li class="nav-item dropdown">
           <a href="javascript:void(0)" class="dropbtn">More</a>
           <div class="dropdown-content">
-            <a href="/old/#portfolio">Portfolio</a>
-            <a href="/old/#contact">Contact</a>
-            <a href="/old/#blog">Blog</a>
-            <a href="/old/live-chat">Live Chat</a>
-            <a href="/old/live-game">Live Chat and Game</a>
-            <a href="/old/puzzle-squares">Puzzle Squares</a>
+            <a href="/old#portfolio">Portfolio</a>
+            <a href="/old#contact">Contact</a>
+            <a href="/old#blog">Blog</a>
+            <a href="/oldlive-chat">Live Chat</a>
+            <a href="/oldlive-game">Live Chat and Game</a>
+            <a href="/oldpuzzle-squares">Puzzle Squares</a>
           </div>
         </li>
         <a href="/old"><button>Old site</button></a>
