--- a/sign-in.html
+++ b/sign-in.html
@@ -122,7 +122,7 @@
     </div>
     <div class="info">
       <p>An account is needed to comment, rate products, and add things to your cart, but it is not required.</p>
-      <p>If you'd prefer not to create an account, you can visit our <a href="old#products">Products</a> or <a href="old#about">About Us</a> sections.</p>
+      <p>If you'd prefer not to create an account, you can visit our <a href="#products">Products</a> or <a href="#about">About Us</a> sections.</p>
     </div>
   </div>
 
@@ -130,7 +130,7 @@
     function handleCredentialResponse(response) {
       console.log("Encoded JWT ID token: " + response.credential);
       // Redirect to the products section
-      window.location.href = 'https://unlim8ted.com/old#products';
+      window.location.href = 'https://unlim8ted.com#products';
     }
   </script>
 </body>
