fix incorrect function name

--- a/index.html
+++ b/index.html
@@ -2138,7 +2138,7 @@
       });
       }
       else{
-        const home = getElementById("home");
+        const home = document.getElementById("home");
         home.style.display = 'block'
       }
     }
