--- a/index.html
+++ b/index.html
@@ -2133,6 +2133,8 @@
       var hash = window.location.hash || '#home';
       if (hash!="#home"){
         const sections = document.querySelectorAll('.content-section');
+        const home = document.getElementById("home");
+        home.style.display = 'none'
       sections.forEach(section => {
         section.style.display = section.id === hash.substring(1) ? 'block' : 'none';
       });
