--- a/test.html
+++ b/test.html
@@ -1,129 +1,100 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Infinite Neon Horizontal Scroll</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      overflow: hidden; /* Prevent default scrolling behavior */
-    }
+<script src="https://accounts.google.com/gsi/client" async defer></script>
+<style>        .profile-dropdown {
+  position: relative;
+  display: inline-block;
+}
 
-    main {
-      height: 150vh; /* Simulate a tall main content */
-      background: linear-gradient(to bottom, #1a1a2e, #16213e);
-      color: white;
-      text-align: center;
-      padding: 50px;
-    }
+.profile-icon {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  cursor: pointer;
+}
 
-    footer {
-      height: 100px;
-      background: #0f3460;
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
+.dropdown-content {
+  display: none;
+  position: absolute;
+  top: 50px;
+  right: 0;
+  background-color: white;
+  min-width: 150px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+  border-radius: 5px;
+  overflow: hidden;
+}
 
-    .neon-bar-container {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 8px; /* Thin flat bar */
-      background: #1a1a2e;
-      overflow: hidden;
-      z-index: 1000;
-      visibility: hidden; /* Hidden until horizontal scrolling starts */
-    }
+.dropdown-content a {
+  padding: 10px 15px;
+  text-decoration: none;
+  display: block;
+  color: #333;
+  font-size: 14px;
+}
 
-    .neon-bar {
-      display: flex;
-      gap: 20px;
-      align-items: center;
-      width: 200%; /* Double width for seamless scrolling */
-    }
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
 
-    .neon-item {
-      width: 100px;
-      height: 8px;
-      background: linear-gradient(to right, #00f, #0ff);
-      border-radius: 4px;
-      box-shadow: 0 0 10px #00f, 0 0 20px #0ff;
-    }
-  </style>
-</head>
-<body>
-  <main>
-    <h1>Scroll Down</h1>
-    <p>When you reach the footer, scrolling transitions to infinite horizontal scrolling.</p>
-  </main>
-  <footer id="homefooter">
-    Footer Section
-  </footer>
-  <div class="neon-bar-container" id="neon-bar-container">
-    <div class="neon-bar" id="neon-bar">
-      <!-- Neon items will be added dynamically -->
-    </div>
-  </div>
+.profile-dropdown:hover .dropdown-content {
+  display: block;
+}</style>
+        <div class="user-menu" id="user-menu"></div>
+    <script>
+      // Initialize Google Sign-In
+      function handleCredentialResponse(response) {
+          const userData = JSON.parse(atob(response.credential.split('.')[1]));
 
-  <script>
-    const footer = document.getElementById('homefooter');
-    const neonBarContainer = document.getElementById('neon-bar-container');
-    const neonBar = document.getElementById('neon-bar');
+          // Save user data in localStorage
+          localStorage.setItem('user', JSON.stringify({
+              name: userData.name,
+              email: userData.email,
+              picture: userData.picture
+          }));
 
-    // Add neon items dynamically
-    for (let i = 0; i < 20; i++) {
-      const div = document.createElement('div');
-      div.classList.add('neon-item');
-      neonBar.appendChild(div);
-    }
-
-    // Duplicate the neon items for seamless infinite scrolling
-    neonBar.innerHTML += neonBar.innerHTML;
-
-    let isHorizontalScrollActive = false;
-    let horizontalScrollPosition = 0;
-
-    const handleWheelScroll = (evt) => {
-      const footerRect = footer.getBoundingClientRect();
-
-      // Check if user has reached the footer
-      if (footerRect.top <= window.innerHeight) {
-        evt.preventDefault();
-
-        // Activate horizontal scrolling
-        if (!isHorizontalScrollActive) {
-          isHorizontalScrollActive = true;
-          neonBarContainer.style.visibility = 'visible';
-        }
-
-        // Handle horizontal scrolling
-        horizontalScrollPosition += evt.deltaY; // Use vertical scroll to drive horizontal movement
-
-        // Loop the scroll position for infinite effect
-        if (horizontalScrollPosition > neonBar.scrollWidth / 2) {
-          horizontalScrollPosition = 0;
-        } else if (horizontalScrollPosition < 0) {
-          horizontalScrollPosition = neonBar.scrollWidth / 2;
-        }
-
-        // Apply the scroll position to the neon bar
-        neonBar.style.transform = `translateX(-${horizontalScrollPosition}px)`;
-      } else {
-        // Deactivate horizontal scrolling
-        if (isHorizontalScrollActive) {
-          isHorizontalScrollActive = false;
-          neonBarContainer.style.visibility = 'hidden';
-        }
+          updateUserMenu();
       }
-    };
 
-    // Add wheel event listener for scrolling
-    window.addEventListener('wheel', handleWheelScroll, { passive: false });
+      window.onload = function () {
+          google.accounts.id.initialize({
+              client_id: "",
+              callback: handleCredentialResponse
+          });
+
+          // Render the sign-in button
+          updateUserMenu();
+      };
+
+      function updateUserMenu() {
+          const userMenu = document.getElementById('user-menu');
+          const user = JSON.parse(localStorage.getItem('user'));
+
+          if (user) {
+              // User is signed in
+              userMenu.innerHTML = `
+                  <div class="profile-dropdown">
+                      <img src="${user.picture}" alt="Profile" class="profile-icon">
+                      <div class="dropdown-content">
+                          <a href="/profile">View Profile</a>
+                          <a href="#" id="sign-out">Sign Out</a>
+                      </div>
+                  </div>
+              `;
+
+              document.getElementById('sign-out').addEventListener('click', () => {
+                  localStorage.removeItem('user');
+                  updateUserMenu();
+              });
+          } else {
+              // User is not signed in
+              userMenu.innerHTML = `
+                  <div id="g_id_signin"></div>
+              `;
+
+              google.accounts.id.renderButton(
+                  document.getElementById('g_id_signin'),
+                  { theme: "outline", size: "large" } // Customization options
+              );
+          }
+      }
   </script>
-</body>
-</html>
