--- a/test.html
+++ b/test.html
@@ -57,7 +57,7 @@
 
       window.onload = function () {
           google.accounts.id.initialize({
-              client_id: "",
+              client_id: "657222021545-6cie7sk23lanq2t6oj7t6ijs404nav4g.apps.googleusercontent.com",
               callback: handleCredentialResponse
           });
 
