fix software image url

--- a/index.html
+++ b/index.html
@@ -1380,7 +1380,7 @@
         <p>Check out our stylish clothes.</p>
       </a>
       <a href="#software" class="product-box">
-        <img src="unlim8ted.com/images/products/software/Screenshot 2023-09-21 181742(1).png" alt="Software">
+        <img src="images/products/software/Screenshot 2023-09-21 181742(1).png" alt="Software">
         <h2>Software</h2>
         <p>Explore our apps and video games.</p>
       </a>
